--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,8 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "VITE_CLERK_PUBLISHABLE_KEY": "@vite_clerk_publishable_key"
+  }
 }
-
